@@ -1,3 +1,6 @@
+- draksound:
+  o enable to set 5.1 channels (#38796)
+
 Version 10.11 - 11 March 2008
 
 - diskdrake:
